# Quadrith

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
doc/: design.md  manual.md  requirements.md  requrements.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fsops.rs  lib.rs  main.rs  scheduler.rs
src/components/: QuickAddPopup.tsx
src/hooks/: useDragCard.ts
src/lib/: archive.ts  backup.ts  commandPalette.test.ts  commandPalette.ts  coords.test.ts  coords.ts  db.ts  desktop.ts  dragTargets.ts  effort.test.ts  effort.ts  export.test.ts  export.ts  exportFile.ts  fsops.ts  layout.test.ts  layout.ts  migrations.test.ts  migrations.ts  notifications.ts  quadrant.test.ts  quadrant.ts  recurrence.test.ts  recurrence.ts  redmineExport.test.ts  redmineExport.ts  reminders.test.ts  reminders.ts  result.test.ts  result.ts  review.test.ts  review.ts  selection.test.ts  selection.ts  stats.test.ts  stats.ts  switchPlan.test.ts  switchPlan.ts  tagColors.test.ts  tagColors.ts  (+7 more)
src/repositories/: settingsRepo.ts  tagRepo.ts  taskRepo.ts  templateRepo.ts
src/stores/: settingsStore.ts  tagStore.ts  taskStore.ts  templateStore.ts  toastStore.ts  uiStore.ts
(+27 files in other folders)
