[package]
name = "quadrith"
version = "0.1.0"
description = "重要度・緊急度・状態の3軸タスク管理アプリ"
edition = "2021"

[lib]
name = "quadrith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
